--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ Author URL: http://w3layouts.com
                     </p>
                     <small id="namecheck1" class="form-text
           text-danger">
-                      Name should not contain numbers
+                      Name should not contain numbers and space
                     </small>
                   </div>
                 </div>
